# ruka-raposa

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
Base/: CMakeLists.txt
Base/3xJson/: CMakeLists.txt
Base/3xJson/CMake/: XJ_ASanSupport.cmake  XJ_GenerateTests.cmake  XJ_TryToAddLibrary.cmake
Base/3xJson/include/3xJson/: 3xJson.h  Decoder.h  Enums.h  Redirects.h
Base/3xJson/include/3xJson/Data/: Node.h  Value.h
Base/3xJson/include/3xJson/Decoder/: Instance.h  Tokenizer.h
Base/3xJson/include/3xJson/Decoder/Tokenizer/: EatString.h  EatToken.h  GetCharacter.h  ResetState.h  Rewind.h
Base/3xJson/include/3xJson/Enums/: Data.h  Tokenizer.h
Base/3xJson/include/3xJson/Enums/Data/: Node.h  Value.h
Base/3xJson/include/3xJson/Enums/Decoder/: Tokenizer.h
Base/3xJson/include/3xJson/Redirects/: NK.h
Base/3xJson/include/3xJson/Types/: Basics.h
Base/3xJson/src/3xJson/Data/: Node.c  Value.c
Base/3xJson/src/3xJson/Decoder/: Tokenizer.c
Base/3xJson/src/3xJson/Decoder/Tokenizer/: EatString.c  EatToken.c  GetCharacter.c  ResetState.c  Rewind.c  Step.c
Base/3xJson/tests/: XJDecoderTokenizerTest.c
Base/NK/: CMakeLists.txt
Base/NK/include/NK/: Config.h  Core.h  Internals.h  NK.h  Redirects.h  Support.h  Types.h
Base/NK/include/NK/Core/: Memory.h  Panic.h  Reader.h  Validator.h
Base/NK/include/NK/Core/Memory/: Allocator.h
Base/NK/include/NK/Core/Readers/: File.h
Base/NK/include/NK/Internals/: Hash.h  Subsystems.h  Types.h
Base/NK/include/NK/Internals/HashImplementations/: FNV.inl
Base/NK/include/NK/Internals/Subsystems/: GlobalAllocatorStatistics.h  GlobalStringPool.h
Base/NK/include/NK/Internals/Types/: StringPool.h  Table.h
Base/NK/include/NK/Types/: AllocatorStatistics.h  Basics.h  Containers.h  String.h
Base/NK/include/NK/Types/Containers/: Map.h  Queue.h  Vector.h
Base/NK/include/NK/Types/String/: Dynamic.h  Submerged.h
Base/NK/src/NK/: NK.c
Base/NK/src/NK/Core/: Panic.c  Reader.c  Validator.c
Base/NK/src/NK/Core/Memory/: Allocator.c
Base/NK/src/NK/Core/Readers/: File.c
Base/NK/src/NK/Internals/: Hash.c  Subsystems.c
Base/NK/src/NK/Internals/Subsystems/: GlobalAllocatorStatistics.c  GlobalStringPool.c
Base/NK/src/NK/Internals/Types/: StringPool.c  Table.c
Base/NK/src/NK/Types/Containers/: Map.c  Queue.c  Vector.c
Base/NK/src/NK/Types/String/: Dynamic.c  Submerged.c
Base/NK/tests/: NKInit.c  NKMapInsertion.c  NKMapIsStringDeleting.c  NKSubmergedStrings.c  NKTableInsertion.c
Base/Progator/: CMakeLists.txt
Base/Progator/CMake/: PG_ASanSupport.cmake
Base/Progator/include/Progator/: Backends.h  Core.h  Enum.h  Objects.h  Progator.h  Redirects.h  Types.h
Base/Progator/include/Progator/Backends/: OG33.h
Base/Progator/include/Progator/Backends/OG33/: Config.h  Framebuffer.h  GL.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Types.h  Window.h
Base/Progator/include/Progator/Core/: Base.h  Pointers.h
Base/Progator/include/Progator/Core/Pointers/: Framebuffer.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Window.h
Base/Progator/include/Progator/Enums/: Backend.h  Renderer.h  Window.h
Base/Progator/include/Progator/Internals/: SDLIntegration.h
Base/Progator/include/Progator/Objects/: Framebuffer.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Window.h
Base/Progator/include/Progator/Redirects/: NK.h  SDL.h
Base/Progator/include/Progator/Types/: Basics.h  Specifications.h
Base/Progator/src/Progator/: Progator.c
Base/Progator/src/Progator/Backends/: OG33.c
Base/Progator/src/Progator/Backends/OG33/: Framebuffer.c  Mesh.c  Renderer.c  Shader.c  Texture.c  Window.c
Base/Progator/src/Progator/Core/: Base.c
Base/Progator/src/Progator/Internals/: SDLIntegration.c
Base/Progator/src/Progator/Objects/: Framebuffer.c  Mesh.c  Renderer.c  Shader.c  Texture.c  Window.c
Base/Redgator/include/Redgator/: Core.h  Redgator.h  Redirects.h  Types.h
Base/Redgator/include/Redgator/Core/: Backend.h  Base.h
Base/Redgator/include/Redgator/Core/Backend/: Window.h
Base/Redgator/include/Redgator/Redirects/: NK.h
Base/Redgator/include/Redgator/Types/: Basics.h
CMake/: ANSICDemand.cmake  ASanSupport.cmake  RR_ANSICDemand.cmake  RR_ASanSupport.cmake  RR_SetupNK.cmake  RR_SetupPG.cmake  RR_SetupXJ.cmake  TestGenerator.cmake
Konigs/: CMakeLists.txt
Konigs/Base/Nobogen/Infrastructure/FAS/app/: main.kos
Konigs/Base/Protogen/Infrastructure/: fas.py
Konigs/Base/Protogen/Infrastructure/Base/: Validator.py
Konigs/Base/Protogen/LibK/include/Kogs/: Definitions.kop
Konigs/Base/Protogen/include/: Kog.kop
Konigs/Base/Protogen/include/Types/: Ark.kop  Maybe.kop
Konigs/Demos/: Counting.kos  Empty.kos  HelloWorld.kos  Ternary.kos
Konigs/Fe64/: CMakeLists.txt
Konigs/Fe64/Echsenkonig/include/Echsenkonig/: Config.h  Echsenkonig.h  Types.h
Konigs/Fe64/Echsenkonig/include/Echsenkonig/Types/: Basics.h
Konigs/Fe64/Echsenkonig/include/Echsenkonig/VM/: Instance.h  Memory.h
Konigs/Fe64/FAS/: fas.py
Konigs/Fe64/FAS/App/: main.c
Konigs/Fe64/FAS/include/FAS/: FAS.h  Redirects.h
Konigs/Fe64/FAS/include/FAS/Redirects/: NK.h
Konigs/Fe64/FAS/include/FAS/Types/: Basics.h
Konigs/Fe64/FAS/tests/: EndlessLoop.S  Header.S
Ruka/: CMakeLists.txt
Ruka/Engine/: CMakeLists.txt
Ruka/Engine/app/: main.c
Ruka/Engine/include/Engine/: Config.h  Core.h  Engine.h  Enums.h  Instance.h  Mode.h  Redirects.h
Ruka/Engine/include/Engine/Core/: Basics.h  Graphics.h
Ruka/Engine/include/Engine/Enums/: EngineModes.h
Ruka/Engine/include/Engine/Mode/: Base.h  Implementations.h
Ruka/Engine/include/Engine/Mode/Initialization/: Implementation.h  Mode.h
Ruka/Engine/include/Engine/Mode/Scene/: Implementation.h  Mode.h
Ruka/Engine/include/Engine/Redirects/: NK.h  Progator.h
Ruka/Engine/include/Engine/Types/: Basics.h
Ruka/Engine/src/Engine/: Core.c  Engine.c  Instance.c
Ruka/Engine/src/Engine/Core/: Basics.c  Graphics.c
Ruka/Engine/src/Engine/Mode/: Base.c
Ruka/Engine/src/Engine/Mode/Initialization/: Implementation.c  Mode.c
Ruka/Engine/src/Engine/Mode/Scene/: Implementation.c  Mode.c
(+5 files in other folders)
